codegen/ui_tests/return_pointer.stderr
error: Rhai functions cannot return pointers
  --> ui_tests/return_pointer.rs:13:33
   |
13 | pub fn test_fn(input: Clonable) -> *const str {
   |                                 ^
